新文件：   .gitignore 	删除：     __pycache__/manage.cpython-35.pyc 	删除：     access_token.log 	修改：     access_token.py 	删除：     app_data.json 	修改：     db.sqlite3 	删除：     menu/__pycache__/__init__.cpython-35.pyc 	删除：     menu/__pycache__/admin.cpython-35.pyc 	删除：     menu/__pycache__/init_menu.cpython-35.pyc 	删除：     menu/__pycache__/models.cpython-35.pyc 	新文件：   menu/init_menu.py 	修改：     menu/menu.json 	删除：     menu/migrations/__pycache__/0001_initial.cpython-35.pyc 	删除：     menu/migrations/__pycache__/__init__.cpython-35.pyc 	修改：     menu/models.py 	删除：     message_receive/__pycache__/__init__.cpython-35.pyc 	删除：     message_receive/__pycache__/admin.cpython-35.pyc 	删除：     message_receive/__pycache__/models.cpython-35.pyc 	删除：     message_receive/__pycache__/urls.cpython-35.pyc 	删除：     message_receive/__pycache__/views.cpython-35.pyc 	删除：     message_receive/migrations/__pycache__/__init__.cpython-35.pyc 	删除：     review/__pycache__/__init__.cpython-35.pyc 	删除：     review/__pycache__/admin.cpython-35.pyc 	删除：     review/__pycache__/grap.cpython-35.pyc 	删除：     review/__pycache__/models.cpython-35.pyc 	删除：     review/__pycache__/urls.cpython-35.pyc 	删除：     review/__pycache__/views.cpython-35.pyc 	修改：     review/grap.py 	新文件：   review/migrations/0002_content_news_from.py 	删除：     review/migrations/__pycache__/0001_initial.cpython-35.pyc 	删除：     review/migrations/__pycache__/__init__.cpython-35.pyc 	修改：     review/models.py 	删除：     review/templates/.review.html.un~ 	修改：     review/templates/review/review.html 	删除：     review/templates/review/review.html~ 	修改：     review/views.py 	删除：     scgysu_wechat/__pycache__/__init__.cpython-35.pyc 	删除：     scgysu_wechat/__pycache__/settings.cpython-35.pyc 	删除：     scgysu_wechat/__pycache__/urls.cpython-35.pyc 	删除：     scgysu_wechat/__pycache__/wsgi.cpython-35.pyc 	新文件：   static/review/style.css

--- a/review/templates/review/review.html
+++ b/review/templates/review/review.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta content="text/html">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  </head>
-
-  <body>
-    <ul class="list-unstyled">
-      {% for thumb_pic in thumb_pic_list %}
-      <li>{{ thumb_pic }}</li>
-      {% endfor %}
-    </ol>
-  </body>
-
+<html class="audioSupported">
+	<head>
+		{% load staticfiles %}
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="format-detection" content="telephone=no">
+		<title>{{ news_type }}</title>
+		<link type="text/css" rel="stylesheet" href="{% static "review/style.css" %}">
+		<script>
+			_breakImg = 'http://pub.idqqimg.com/qqmobile/pubhistory/images/img_failed.png';
+			_imgError = function(img){
+				if(img.getAttribute('src') != _breakImg){ img.onerror = null; img.src = _breakImg }
+			}
+			var _total=2080;
+		</script>
+	</head>
+	<body>
+		{% for news in news_list %}
+		<div class="multi">
+			<a href="{{ first_url }}" class="item">
+				<time>{{ time }}</time>
+				<div class="wrap">
+					<img src="{{ first_cover_pic_path }}" onerror="_imgError(this)">
+					<h4>{{ first_title }}</h4>
+				</div>
+			</a>
+			{% for content in content_list %}
+			<a href="{{ url }}" class="item">
+				<img src="{{ cover_pic_path }}" onerror="_imgError(this)">
+				<h5>{{ title }}</h5>
+			</a>
+			{% endfor %}
+		</div>
+		{% endfor %}
+	</body>
 </html>
