modified:   access_token.py 	modified:   db.sqlite3 	modified:   menu/menu.json 	modified:   menu/menu.py 	modified:   message_receive/urls.py 	modified:   message_receive/views.py 	modified:   mis/lesson_robber.py 	new file:   mis/templates/mis/.index.html.swp 	modified:   mis/templates/mis/index.html 	modified:   review/admin.py 	modified:   review/models.py 	modified:   review/views.py 	modified:   scgysu_wechat/settings.py 	modified:   scgysu_wechat/urls.py 	new file:   static/admin/css/base.css 	new file:   static/admin/css/changelists.css 	new file:   static/admin/css/dashboard.css 	new file:   static/admin/css/fonts.css 	new file:   static/admin/css/forms.css 	new file:   static/admin/css/login.css 	new file:   static/admin/css/rtl.css 	new file:   static/admin/css/widgets.css 	new file:   static/admin/fonts/LICENSE.txt 	new file:   static/admin/fonts/README.txt 	new file:   static/admin/fonts/Roboto-Bold-webfont.woff 	new file:   static/admin/fonts/Roboto-Light-webfont.woff 	new file:   static/admin/fonts/Roboto-Regular-webfont.woff 	new file:   static/admin/img/LICENSE 	new file:   static/admin/img/README.txt 	new file:   static/admin/img/calendar-icons.svg 	new file:   static/admin/img/gis/move_vertex_off.svg 	new file:   static/admin/img/gis/move_vertex_on.svg 	new file:   static/admin/img/icon-addlink.svg 	new file:   static/admin/img/icon-alert.svg 	new file:   static/admin/img/icon-calendar.svg 	new file:   static/admin/img/icon-changelink.svg 	new file:   static/admin/img/icon-clock.svg 	new file:   static/admin/img/icon-deletelink.svg 	new file:   static/admin/img/icon-no.svg 	new file:   static/admin/img/icon-unknown-alt.svg 	new file:   static/admin/img/icon-unknown.svg 	new file:   static/admin/img/icon-yes.svg 	new file:   static/admin/img/inline-delete.svg 	new file:   static/admin/img/search.svg 	new file:   static/admin/img/selector-icons.svg 	new file:   static/admin/img/sorting-icons.svg 	new file:   static/admin/img/tooltag-add.svg 	new fil

--- a/mis/templates/mis/index.html
+++ b/mis/templates/mis/index.html
@@ -8,6 +8,12 @@
 			function hide() {
 				document.getElementById("announce").style.display='none';
 			}
+			function reload() {
+				location.assign("http://wechat.ourscgy.ustc.edu.cn/mis");
+			}
+			function msg() {
+				alert("已添加进后台选课");
+			}
 		</script>
 		<style type="text/css">
 			#align1{
@@ -52,6 +58,7 @@
 			<label id="align1">用户名:</label><input type="text" name="username" id="align2"/><br/><br/>
 			<label id="align1">密码:</label><input type="password" name="password" id="align2"/><br/><br/>
 			<label id="align1">验证码:</label><input type="text" name="check" id="align2"/><br/><br/>
+			<img src="{{ picture }}" onclick="reload()" alt="Sorry, something went wrong" align="right" />
 			<label id="align1">课程类型:</label>
 				<select name="lesson_type" id="align2"> 
 					<option value='1'>1:计划内课程</option>
@@ -63,8 +70,7 @@
 				</select>
 			<br/><br/>
 			<label id="align1">课堂号:</label><input type="text" name="lesson_number" id="align2" /><br/><br/>
-			<img src="{{ picture }}" onclick="reload()" alt="Sorry, something went wrong" align="right" />
-			<input type="submit" name="Submit" id="align2" />
+			<input type="submit" name="Submit" id="align2" onclick="msg();" />
 		</form>	
 
 	</body>
